# hackmit-food-app

./: .gitignore  README.md
backend/: .env.example  Caddyfile  Dockerfile  README_DOCKER.md  api_router.py  api_tester.py  config.py  database.py  docker-compose.yml  init.sql  models.py  requirements.txt
backend/auth/: auth_api.py
backend/auth/types/: auth_types.py
backend/data_fetchers/: gmap.py  parser.py  types.py
backend/food_info/: info_api.py
backend/food_info/beli/: beli_api.py
backend/food_info/doordash/: doordash_api.py
backend/food_info/google_maps/: gmaps_api.py
backend/food_info/processed/: Burger King.json  Cambridge Pizza.json  Hei La Moon Restaurant.json  La Perle Caribbean Restaurant.json  Pai Kin Kao Thai Restaurant.json  Pasta Tana&apos;s.json  chikfila.json  gai.json  piattini.json  shahs.json
backend/ocr/: lib.py
backend/recommender/: recs_api.py
backend/recommender/types/: recs_types.py
backend/user_profile/: profile_api.py
backend/user_profile/types/: profile_types.py
backend/util/: fuzzy_match.py
backend/util/auth/: jwt_handler.py
backend/util/chat/: gpt_client.py
backend/util/formatting/: prompt_builder.py
backend/vapi/: vapi_endpoints.py
data-fetchers/: beli.py  browser_scraper.py  doordash_scrape.py  gmap.py  out.txt  parser.py  pyproject.toml  res.txt
data-fetchers/data/: chikfila.txt  gai.txt  piattini.txt  shahs.txt
data-fetchers/processed/: chikfila.json  gai.json
frontend/: next.config.ts  package-lock.json  package.json
frontend/public/: manifest.json
frontend/src/: auth.ts  openapi.json
(+54 files in other folders)
