[tool.poetry]
name = "data-fetchers"
version = "0.1.0"
description = ""
authors = ["Arnav Jindal <arnav.jindal7@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.5"
googlemaps = "^4.10.0"
selenium = "^4.35.0"
webdriver-manager = "^4.0.2"
dotenv = "^0.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
